# backend/internal/model/approval_definition.go
@@ -57,7 +57,7 @@ type ApprovalDefinition struct {
 
 	// 状态和元数据，
 	// Builtin 系统内置,Custom 自定义,Feishu, DingTalk, WeChatWork
-	ApprovalSystem string `gorm:"size:16;default:Builtin"`
+	Platform string `gorm:"size:16;default:Builtin"`
 	// 状态:Normal 正常, Frozen 已冻结, Deleted 已删除
 	Status string `gorm:"size:8;default:Normal"`
 	// Priority  int    `gorm:"default:0"`             // 优先级
