# shared/types/models/piemdm-internal-model-approval-definition.ts
@@ -1,105 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * PieMDM API
- * PieMDM Master Data Management System API Documentation
- *
- * The version of the OpenAPI document: 1.0
- * Contact: support@piemdm.com
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-// May contain unused imports in some cases
-// @ts-ignore
-import { GormDeletedAt } from './gorm-deleted-at';
-
-/**
- * 
- * @export
- * @interface PiemdmInternalModelApprovalDefinition
- */
-export interface PiemdmInternalModelApprovalDefinition {
-    /**
-     * 状态和元数据， Builtin 系统内置,Custom 自定义,Feishu, DingTalk, WeChatWork
-     * @type {string}
-     * @memberof PiemdmInternalModelApprovalDefinition
-     */
-    'approvalSystem'?: string;
-    /**
-     * 审批定义唯一编码
-     * @type {string}
-     * @memberof PiemdmInternalModelApprovalDefinition
-     */
-    'code'?: string;
-    /**
-     * 创建时间
-     * @type {string}
-     * @memberof PiemdmInternalModelApprovalDefinition
-     */
-    'createdAt'?: string;
-    /**
-     * 审计字段
-     * @type {string}
-     * @memberof PiemdmInternalModelApprovalDefinition
-     */
-    'createdBy'?: string;
-    /**
-     * 
-     * @type {GormDeletedAt}
-     * @memberof PiemdmInternalModelApprovalDefinition
-     */
-    'deletedAt'?: GormDeletedAt;
-    /**
-     * 审批描述
-     * @type {string}
-     * @memberof PiemdmInternalModelApprovalDefinition
-     */
-    'description'?: string;
-    /**
-     * 表单配置 FormConfig string `gorm:\"type:text\"` // 表单配置JSON FormSchema string `gorm:\"type:text\"` // 表单结构定义
-     * @type {string}
-     * @memberof PiemdmInternalModelApprovalDefinition
-     */
-    'formData'?: string;
-    /**
-     * 
-     * @type {number}
-     * @memberof PiemdmInternalModelApprovalDefinition
-     */
-    'id'?: number;
-    /**
-     * 审批名称
-     * @type {string}
-     * @memberof PiemdmInternalModelApprovalDefinition
-     */
-    'name': string;
-    /**
-     * 流程配置 ProcessConfig string `gorm:\"type:text\"` // 流程配置JSON ProcessNodes  string `gorm:\"type:text\"` // 流程节点配置
-     * @type {string}
-     * @memberof PiemdmInternalModelApprovalDefinition
-     */
-    'nodeList'?: string;
-    /**
-     * 状态:Normal 正常, Frozen 已冻结, Deleted 已删除
-     * @type {string}
-     * @memberof PiemdmInternalModelApprovalDefinition
-     */
-    'status'?: string;
-    /**
-     * 更新时间
-     * @type {string}
-     * @memberof PiemdmInternalModelApprovalDefinition
-     */
-    'updatedAt'?: string;
-    /**
-     * 更新人
-     * @type {string}
-     * @memberof PiemdmInternalModelApprovalDefinition
-     */
-    'updatedBy'?: string;
-}
-
