# shared/types/models/piemdm-internal-pkg-request-create-approval-def-request.ts
@@ -1,78 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * PieMDM API
- * PieMDM Master Data Management System API Documentation
- *
- * The version of the OpenAPI document: 1.0
- * Contact: support@piemdm.com
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-
-/**
- * 
- * @export
- * @interface PiemdmInternalPkgRequestCreateApprovalDefRequest
- */
-export interface PiemdmInternalPkgRequestCreateApprovalDefRequest {
-    /**
-     * 
-     * @type {string}
-     * @memberof PiemdmInternalPkgRequestCreateApprovalDefRequest
-     */
-    'approvalSystem': PiemdmInternalPkgRequestCreateApprovalDefRequestApprovalSystemEnum;
-    /**
-     * EntityCode  string `json:\"entityCode\" binding:\"required,min=1,max=64\" comment:\"关联实体编码\"` Category    string `json:\"category\" binding:\"max=64\" comment:\"审批分类\"`
-     * @type {string}
-     * @memberof PiemdmInternalPkgRequestCreateApprovalDefRequest
-     */
-    'description'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof PiemdmInternalPkgRequestCreateApprovalDefRequest
-     */
-    'formData'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof PiemdmInternalPkgRequestCreateApprovalDefRequest
-     */
-    'name': string;
-    /**
-     * 
-     * @type {string}
-     * @memberof PiemdmInternalPkgRequestCreateApprovalDefRequest
-     */
-    'nodeList'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof PiemdmInternalPkgRequestCreateApprovalDefRequest
-     */
-    'status'?: PiemdmInternalPkgRequestCreateApprovalDefRequestStatusEnum;
-}
-
-export const PiemdmInternalPkgRequestCreateApprovalDefRequestApprovalSystemEnum = {
-    Builtin: 'Builtin',
-    Feishu: 'Feishu',
-    DingTalk: 'DingTalk',
-    WeChatWork: 'WeChatWork',
-    Custom: 'Custom'
-} as const;
-
-export type PiemdmInternalPkgRequestCreateApprovalDefRequestApprovalSystemEnum = typeof PiemdmInternalPkgRequestCreateApprovalDefRequestApprovalSystemEnum[keyof typeof PiemdmInternalPkgRequestCreateApprovalDefRequestApprovalSystemEnum];
-export const PiemdmInternalPkgRequestCreateApprovalDefRequestStatusEnum = {
-    Normal: 'Normal',
-    Frozen: 'Frozen',
-    Deleted: 'Deleted'
-} as const;
-
-export type PiemdmInternalPkgRequestCreateApprovalDefRequestStatusEnum = typeof PiemdmInternalPkgRequestCreateApprovalDefRequestStatusEnum[keyof typeof PiemdmInternalPkgRequestCreateApprovalDefRequestStatusEnum];
-
-
