# shared/types/models/piemdm-internal-pkg-request-update-approval-def-request.ts
@@ -1,84 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * PieMDM API
- * PieMDM Master Data Management System API Documentation
- *
- * The version of the OpenAPI document: 1.0
- * Contact: support@piemdm.com
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-
-/**
- * 
- * @export
- * @interface PiemdmInternalPkgRequestUpdateApprovalDefRequest
- */
-export interface PiemdmInternalPkgRequestUpdateApprovalDefRequest {
-    /**
-     * 
-     * @type {string}
-     * @memberof PiemdmInternalPkgRequestUpdateApprovalDefRequest
-     */
-    'approvalSystem': PiemdmInternalPkgRequestUpdateApprovalDefRequestApprovalSystemEnum;
-    /**
-     * EntityCode  string `json:\"entityCode\" binding:\"required,min=1,max=64\" comment:\"关联实体编码\"` Category    string `json:\"category\" binding:\"max=64\" comment:\"审批分类\"`
-     * @type {string}
-     * @memberof PiemdmInternalPkgRequestUpdateApprovalDefRequest
-     */
-    'description'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof PiemdmInternalPkgRequestUpdateApprovalDefRequest
-     */
-    'formData'?: string;
-    /**
-     * 
-     * @type {number}
-     * @memberof PiemdmInternalPkgRequestUpdateApprovalDefRequest
-     */
-    'id': number;
-    /**
-     * 
-     * @type {string}
-     * @memberof PiemdmInternalPkgRequestUpdateApprovalDefRequest
-     */
-    'name': string;
-    /**
-     * 
-     * @type {string}
-     * @memberof PiemdmInternalPkgRequestUpdateApprovalDefRequest
-     */
-    'nodeList'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof PiemdmInternalPkgRequestUpdateApprovalDefRequest
-     */
-    'status'?: PiemdmInternalPkgRequestUpdateApprovalDefRequestStatusEnum;
-}
-
-export const PiemdmInternalPkgRequestUpdateApprovalDefRequestApprovalSystemEnum = {
-    Builtin: 'Builtin',
-    Feishu: 'Feishu',
-    DingTalk: 'DingTalk',
-    WeChatWork: 'WeChatWork',
-    Custom: 'Custom'
-} as const;
-
-export type PiemdmInternalPkgRequestUpdateApprovalDefRequestApprovalSystemEnum = typeof PiemdmInternalPkgRequestUpdateApprovalDefRequestApprovalSystemEnum[keyof typeof PiemdmInternalPkgRequestUpdateApprovalDefRequestApprovalSystemEnum];
-export const PiemdmInternalPkgRequestUpdateApprovalDefRequestStatusEnum = {
-    Normal: 'Normal',
-    Frozen: 'Frozen',
-    Deleted: 'Deleted'
-} as const;
-
-export type PiemdmInternalPkgRequestUpdateApprovalDefRequestStatusEnum = typeof PiemdmInternalPkgRequestUpdateApprovalDefRequestStatusEnum[keyof typeof PiemdmInternalPkgRequestUpdateApprovalDefRequestStatusEnum];
-
-
